--- a/targets/MenuCost.Rmd
+++ b/targets/MenuCost.Rmd
@@ -12,6 +12,8 @@ library(targets)
 library(dplyr)
 library(ggplot2)
 library(gridExtra)
+library(plotly)
+library(tidyr)
 tar_load(AverageInflationRatePercentage)
 tar_load(c(popularItems,average_menu_cost_wax_before,average_menu_cost_wax_after,
            average_menu_cost_wane_before,average_menu_cost_wane_after))
@@ -33,6 +35,9 @@ tar_load(c(summary_byGroup_wax_before,
 tar_load(tracking_shopCodes_mealOffering_6popularItems)
 tar_load(c(menu_cost_wax_before,menu_cost_wax_after,menu_cost_wane_after,
            wax_data_before,wax_data_after,wane_data_after))
+tar_load(c(average_inflation_rate_wax,average_inflation_rate_wane))
+tar_load(tb_CPI_summary_byGroup)
+tar_load(shopcodeCounty)
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
@@ -1037,314 +1042,318 @@ data.frame(business_hour=c("breakfast","lunch","dinner"),
 ```
 
 #### 以持續六項且供應正餐的店家作討論
-|                 | (-Inf,-1]| (-1,0)|     0| (0,1]| (1, Inf]| mean_inflationRates|
-|:----------------|---------:|------:|-----:|-----:|--------:|-------------------:|
-|summary_cpi_wax  |         0|    279| 11469|  3504|        0|           0.0150506|
-|summary_cpi_wane |         0|    263| 12579|  2410|        0|           0.0102684|
+|                 | (-Inf,-0.2]| (-0.2,-0.1]| (-0.1,0]|     0| (0,0.1]| (0.1,0.2]| (0.2,Inf]| mean_inflationRates|
+|:----------------|-----------:|-----------:|--------:|-----:|-------:|---------:|---------:|-------------------:|
+|summary_cpi_wax  |          35|         107|      137| 11469|    2626|       730|       148|           0.0150506|
+|summary_cpi_wane |          27|          79|      157| 12579|    1791|       519|       100|           0.0102684|
+
 
 ```{r,include=FALSE}
-tb_cpi_summary
+average_inflation_rate_wax|>
+  dplyr::filter(shopCode %in% tracking_shopCodes_mealOffering_6popularItems)->average_inflation_rate_wax_mealoffering_6
+average_inflation_rate_wane|>
+  dplyr::filter(shopCode %in% tracking_shopCodes_mealOffering_6popularItems)->average_inflation_rate_wane_mealoffering_6
+summary_cpi_wax<-summarise_inflationRate2(cpi_wax) 
+summary_cpi_wane<-summarise_inflationRate2(cpi_wane) 
+tb_cpi_summary2 <- rbind(
+      summary_cpi_wax,
+      summary_cpi_wane
+    )
+    list(
+      cpi_wax, cpi_wane
+    ) |>
+      purrr::map(
+        mean
+      ) |>
+      unlist() -> mean_inflationRates
+
+    cbind(
+      tb_cpi_summary2, mean_inflationRates
+    )->tb_cpi_summary2
+
 ```
 
-##### 計算持續六項且供應正餐的店家的總價格分布
-|                         | (0,200]| (200,400]| (400,600]| (600,800]| (800,1000]| (1000,1200]| (1200,1400]| (1400,1600]| (1600,1800]| (1800,2000]| (2000,Inf]|     mean|
-|:------------------------|-------:|---------:|---------:|---------:|----------:|-----------:|-----------:|-----------:|-----------:|-----------:|----------:|--------:|
-|summary_price_wax_before |     292|      3507|      3524|      2408|       2114|        1482|         694|         435|         256|         179|        361| 748.0810|
-|summary_price_wax_after  |     271|      3352|      3562|      2441|       2101|        1550|         706|         434|         277|         179|        379| 757.8407|
-|summary_price_wane_after |     253|      3281|      3590|      2401|       2113|        1566|         751|         441|         285|         181|        390| 765.2412|
+```{r}
 
-```{r,include=FALSE}
-tb_price_summary
-```
-##### 計算持續六項且供應正餐的店家的平均價格分布
-|                            | (0,50]| (50,100]| (100,150]| (150,200]| (200,250]| (250,Inf]|     mean|
-|:---------------------------|------:|--------:|---------:|---------:|---------:|---------:|--------:|
-|summary_AvgPrice_wax_before |   1578|     5745|      3535|      2469|       959|       966| 124.6802|
-|summary_AvgPrice_wax_after  |   1454|     5731|      3536|      2556|       959|      1016| 126.3068|
-|summary_AvgPrice_wane_after |   1388|     5736|      3488|      2592|      1017|      1031| 127.5402|
+breaks <- c(-Inf,-0.2,-0.1, -1e-7, 1e-7,0.1, 0.2,Inf)
+labels<-(c("(-Inf,-0.2]","(-0.2,-0.1]","(-0.1,0]","0","(0,0.1]","(0.1,0.2]","(0.2,Inf]"))
 
-```{r,include=FALSE}
-tb_AvgPrice_summary
+
+histogram1 <- cut(average_inflation_rate_wax_mealoffering_6$inflation_rate, breaks, labels)
+frequency_table1 <- table(histogram1)
+
+histogram_df1 <- data.frame(Interval = names(frequency_table1), Frequency = as.numeric(frequency_table1))
+histogram_df1$Interval <- factor(histogram_df1$Interval, levels = labels, ordered = TRUE)
+histogram_wax<-ggplot(histogram_df1, aes(x = Interval, y = Frequency)) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(label = Frequency), vjust = -0.5, size = 3)+
+  labs(title = "The distribution of inflation rate in wax period",
+       x = "Inflation Rate Intervals",
+       y = "Frequency")
 ```
 
-- 可以看出購買持續六項且供應正餐店家的總價格多數是落在200元至400元的區間，而平均價格多數是落在50元至100元區間。而在三期的表較可以發現平均的價格是有上漲趨勢的
 
-##### 以城市來作分類
-|county |         wax_before |         wax_after |          wane_after|
-|:------|-------------------:|------------------:|-------------------:|
-|臺北市 |            908.0214|           917.2971|            926.2033|
-|新竹縣 |            837.1988|           847.5020|            858.9231|
-|金門縣 |            808.3214|           809.0357|            818.5000|
-|新竹市 |            784.8953|           798.2959|            805.9886|
-|新北市 |            770.6656|           779.9671|            788.3362|
-|桃園市 |            734.9096|           746.8893|            754.1057|
-|嘉義市 |            742.0239|           750.7401|            754.0812|
-|澎湖縣 |            733.2778|           748.2778|            748.8333|
-|臺中市 |            725.8912|           738.2753|            746.3136|
-|基隆市 |            725.7116|           734.4419|            741.9283|
-|臺南市 |            712.7912|           721.0766|            726.9040|
-|高雄市 |            702.2629|           709.7223|            716.1454|
-|屏東縣 |            700.8601|           706.8521|            715.0759|
-|雲林縣 |            699.6722|           706.8257|            711.6987|
-|南投縣 |            675.7731|           684.4264|            691.7410|
-|宜蘭縣 |            671.8995|           682.0323|            688.7941|
-|花蓮縣 |            648.6956|           660.9168|            666.4126|
-|苗栗縣 |            647.8611|           656.2687|            663.9937|
-|彰化縣 |            643.5163|           653.2015|            658.5505|
-|嘉義縣 |            619.5929|           631.0282|            636.7814|
-|臺東縣 |            593.0000|           597.0000|            617.0000|
+```{r}
+histogram2 <- cut(average_inflation_rate_wane_mealoffering_6$inflation_rate, breaks, labels)
+frequency_table2 <- table(histogram2)
 
-```{r,include=FALSE}
-tb_price_byGroup_summary|>
-  arrange(desc(wane_after_avgPrice))
+histogram_df2 <- data.frame(Interval = names(frequency_table2), Frequency = as.numeric(frequency_table2))
+histogram_df2$Interval <- factor(histogram_df2$Interval, levels = labels, ordered = TRUE)
+histogram_wane<-ggplot(histogram_df2, aes(x = Interval, y = Frequency)) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(label = Frequency), vjust = -0.5, size = 3)+
+  labs(title = "The distribution of inflation rate in wane period",
+       x = "Inflation Rate Intervals",
+       y = "Frequency")
 ```
-- 以六項商品全購買的總價格來看，並以wane_after這期為標準，前三高分別為台北市、新竹縣以及金門縣
-- 直轄市來說，台北市高居第一，而新北市、桃園市分居五、六名，台中市、台南市以及高雄市則是落在第九、第十一以及第十二名。
-- 離島地區金門縣高居第三，而澎湖縣位居第八，皆在台中市、台南市及高雄市之上。將金門縣的店家取出觀察，可以發現到在28間店裡就有10間的總商品價格在1000元之上，而這10間餐廳又有6間店是販售單價較高的火鍋，這可能是造成金門縣的商品總價格較高的原因。
 
-###### 金門縣總價格分布
-|price     | Freq|
-|:---------|----:|
-|(0,200]   |    1|
-|(200,400] |    3|
-|(400,600] |    8|
-|(600,800] |    1|
-|(800,Inf] |   15|
+```{r,fig.width=10, fig.height=6}
+grid.arrange(histogram_wax, histogram_wane, ncol = 2)
+```
 
-###### 澎湖縣總價格分布
-|price     | Freq|
-|:---------|----:|
-|(0,200]   |    0|
-|(200,400] |    4|
-|(400,600] |    5|
-|(600,800] |    2|
-|(800,Inf] |    7|
 
-##### 以城市來作分類並加入營業時段
+- 從圖中可以發現到，在蛋荒嚴重時有11469間店家是物價上漲率為0(以2月3日為前期,4月27日為後期)，而在蛋荒趨緩時增為12579間店家(以4月27日為前期,7月26日為後期)，且在蛋荒趨緩時，物價上漲率大於0的店家數量有減少的趨勢。
 
-- 只顯示前20筆資料(此處的price是wax_before的價格)
 
-|shopCode |county |   price| breakfast| lunch| dinner|
-|:--------|:------|-------:|---------:|-----:|------:|
-|a008     |基隆市 |  245.00|         0|     0|      1|
-|a06a     |臺北市 | 1180.00|         0|     1|      1|
-|a08d     |臺南市 |  568.00|         0|     1|      1|
-|a0ab     |基隆市 |  785.00|         0|     1|      1|
-|a0ac     |基隆市 |  285.00|         1|     1|      0|
-|a0ah     |臺中市 |  341.00|         0|     0|      1|
-|a0ai     |臺中市 | 1285.00|         0|     1|      1|
-|a0aw     |新北市 |  860.00|         0|     1|      1|
-|a0bj     |雲林縣 |  855.00|         0|     0|      1|
-|a0bm     |新北市 |  965.00|         1|     1|      0|
-|a0bp     |新北市 |  345.00|         1|     1|      0|
-|a0bx     |高雄市 |  700.00|         0|     1|      1|
-|a0cp     |高雄市 |  318.75|         1|     1|      0|
-|a0cu     |桃園市 |  500.00|         1|     1|      1|
-|a0dd     |嘉義市 |  997.00|         0|     1|      1|
-|a0dy     |新北市 | 1190.00|         0|     1|      1|
-|a0el     |新北市 | 1020.00|         0|     1|      1|
-|a0eo     |雲林縣 |  324.00|         1|     1|      1|
-|a0gd     |桃園市 | 2554.00|         0|     0|      1|
-|a0gu     |雲林縣 |  425.00|         0|     1|      1|
+
+
+##### 以城市分類並計算CPI
+
+###### 以wax時期高至低排序
+|county |   CPI_wax|  CPI_wane|
+|:------|---------:|---------:|
+|澎湖縣 | 0.0215527| 0.0005120|
+|花蓮縣 | 0.0198006| 0.0104436|
+|桃園市 | 0.0192837| 0.0094564|
+|嘉義縣 | 0.0182182| 0.0099024|
+|臺中市 | 0.0178917| 0.0112926|
+|苗栗縣 | 0.0178311| 0.0090640|
+|宜蘭縣 | 0.0174885| 0.0106448|
+|新竹市 | 0.0173784| 0.0097222|
+|彰化縣 | 0.0164648| 0.0097770|
+|新竹縣 | 0.0158071| 0.0111707|
+|基隆市 | 0.0148777| 0.0095115|
+|南投縣 | 0.0147994| 0.0128719|
+|臺南市 | 0.0142355| 0.0093070|
+|屏東縣 | 0.0137331| 0.0113882|
+|新北市 | 0.0136278| 0.0117989|
+|雲林縣 | 0.0133700| 0.0097215|
+|臺北市 | 0.0131325| 0.0090395|
+|嘉義市 | 0.0129521| 0.0079991|
+|臺東縣 | 0.0119489| 0.0201091|
+|高雄市 | 0.0112796| 0.0100340|
+|金門縣 | 0.0012108| 0.0114028|
 
 ```{r,include=FALSE}
+tb_CPI_summary_byGroup|>
+  arrange(desc(CPI_wax))
+```
+###### 以wane時期高至低排序
+
+|county |   CPI_wax|  CPI_wane|
+|:------|---------:|---------:|
+|臺東縣 | 0.0119489| 0.0201091|
+|南投縣 | 0.0147994| 0.0128719|
+|新北市 | 0.0136278| 0.0117989|
+|金門縣 | 0.0012108| 0.0114028|
+|屏東縣 | 0.0137331| 0.0113882|
+|臺中市 | 0.0178917| 0.0112926|
+|新竹縣 | 0.0158071| 0.0111707|
+|宜蘭縣 | 0.0174885| 0.0106448|
+|花蓮縣 | 0.0198006| 0.0104436|
+|高雄市 | 0.0112796| 0.0100340|
+|嘉義縣 | 0.0182182| 0.0099024|
+|彰化縣 | 0.0164648| 0.0097770|
+|新竹市 | 0.0173784| 0.0097222|
+|雲林縣 | 0.0133700| 0.0097215|
+|基隆市 | 0.0148777| 0.0095115|
+|桃園市 | 0.0192837| 0.0094564|
+|臺南市 | 0.0142355| 0.0093070|
+|苗栗縣 | 0.0178311| 0.0090640|
+|臺北市 | 0.0131325| 0.0090395|
+|嘉義市 | 0.0129521| 0.0079991|
+|澎湖縣 | 0.0215527| 0.0005120|
+
+
+```{r,include=FALSE}
+tb_CPI_summary_byGroup|>
+  arrange(desc(CPI_wane))
+```
+```{r,warning=FALSE}
+tb_CPI_summary_byGroup|>
+  tidyr::pivot_longer(cols=starts_with("CPI"),names_to = "Period", values_to = "InflationRate")->long_data
+long_data$Period<-factor(long_data$Period,levels = c("CPI_wax","CPI_wane"))
+long_data$county<-factor(long_data$county,levels=c(
+  "南投縣", "嘉義市", "嘉義縣", "基隆市", "宜蘭縣", "屏東縣", "彰化縣",
+  "新竹市", "新竹縣","花蓮縣","苗栗縣","雲林縣",
+  "臺北市","新北市","桃園市","臺中市", "臺南市","高雄市",
+  "澎湖縣","臺東縣","金門縣"))
+color_vector1<-c("#FAF3F0","#F4F2DE","#FAF0D7","#EFE1D1","#FAE392","#FFFEC4",
+                 "#DFD7BF","#FFFAD7","#FAF0E4","#ECE5C7","#EEE3CB","#F0EDD4",
+                 "#F9F5E7","#F8EAD8","#EDDBC7","#FFE7CC","#F1DBBF","#FDEBED",
+                 "#35A29F","#C63D2F","#CF0A0A"
+                 )
+
+plot_ly(long_data, x = ~Period, y = ~InflationRate,color = ~county,colors=color_vector1, text = ~paste0(county, ": ", scales::percent(InflationRate)),hoverinfo="text") %>%
+  add_lines(line = list(width = 3)) %>%
+  layout(title = "Inflation Rate by County",
+         xaxis = list(title = "Period"),
+         yaxis = list(title = "Inflation Rate"),
+         hovermode = "closest"
+         ) %>%
+  add_markers()%>%
+  layout(showlegend = FALSE)
+```
+
+- 從wax到wane時期，只有臺東縣和金門縣的走勢是向上，其餘縣市則是下降，想特別探討這兩個縣市的菜單價格變化。另外一點，澎湖縣在wax時期的物價上漲率在2.16%左右，但在wane時期有劇烈下降幅度，降至0.0512%，是剛好在2/3至4/27這段期間多數店家菜單價格都剛好調漲嗎?
+
+- 圖形說明:將上漲的縣市以紅色系標示，劇烈下跌之縣市用綠色標示
+
+
+```{r}
+long_data$county<-factor(long_data$county,levels=c(
+  "南投縣", "嘉義市", "嘉義縣", "基隆市", "宜蘭縣", "屏東縣", "彰化縣",
+  "新竹市", "新竹縣","花蓮縣","苗栗縣","雲林縣",
+  "澎湖縣","臺東縣","金門縣",
+  "臺北市","新北市","桃園市","臺中市", "臺南市","高雄市"))
+color_vector2<-c("#FAF3F0","#F4F2DE","#FAF0D7","#EFE1D1","#FAE392","#FFFEC4",
+                 "#DFD7BF","#FFFAD7","#FAF0E4","#ECE5C7","#EEE3CB","#F0EDD4",
+                 "#FFE7CC","#F1DBBF","#FDEBED",
+                 "#0C356A","#313866","#504099","#4D3C77","#5C4B99","#461959"
+                 )
+
+plot_ly(long_data, x = ~Period, y = ~InflationRate,color = ~county,colors=color_vector2, text = ~paste0(county, ": ", scales::percent(InflationRate)),hoverinfo="text") %>%
+  add_lines(line = list(width = 3)) %>%
+  layout(title = "Inflation Rate by County",
+         xaxis = list(title = "Period"),
+         yaxis = list(title = "Inflation Rate"),
+         hovermode = "closest"
+         ) %>%
+  add_markers()%>%
+  layout(showlegend = FALSE)
+```
+- 特別標示出直轄市與其他縣市作比較，蛋荒嚴重時期，物價上漲率在前十名的直轄市只有桃園市及台中市，分別排在第三及第五名。但在蛋荒趨緩時期，新北市從15名躍升至第3名，高雄市也從20名升至第10名。
+
+
+
+
+```{r}
+municipality<-c("臺北市","新北市","桃園市","臺中市","臺南市","高雄市")
+long_data|>
+  dplyr::filter(county %in% municipality)->municipality_CPI
+
+municipality_CPI$county<-factor(municipality_CPI$county,levels=c("臺北市","新北市","桃園市","臺中市","臺南市","高雄市"))
+
+color_vector3<-c("#F5EBEB","#146C94","#D5B4B4","#19A7CE","#E4D0D0","#6DA9E4")
+
+
+plot_ly(municipality_CPI, x = ~Period, y = ~InflationRate,
+        color = ~county,colors = color_vector3,
+        text = ~paste0(county, ": ", scales::percent(InflationRate)),hoverinfo="text")%>%
+          add_lines(line = list(width = 3)) %>%
+          layout(title = "Inflation Rate in Municipalities",
+                 xaxis = list(title = "Period"),
+                 yaxis = list(title = "Inflation Rate"),
+                 hovermode = "closest") %>%
+          add_markers()%>%
+          layout(showlegend = FALSE)
+
+```
+
+- 單獨拉出直轄市來做比較
+- 以wane為標準，CPI在1%以上以藍色系標示，在1%以下則用粉色系標示
+- 比較六個直轄市的兩期變化，發現到桃園市的下降幅度是最明顯的，從1.93%下降至0.95%
+- 而台北市在wane時期是所有直轄市中上漲幅度最小的，只有0.9%
+
+
+##### 以營業時間來討論
+
+```{r}
 intersect(names(names_with_breakfast),tracking_shopCodes_mealOffering_6popularItems)->shopCodes_mealOffering_6popularItems_Breakfast
 intersect(names(names_with_lunch),tracking_shopCodes_mealOffering_6popularItems)->shopCodes_mealOffering_6popularItems_Lunch
 intersect(names(names_with_dinner),tracking_shopCodes_mealOffering_6popularItems)->shopCodes_mealOffering_6popularItems_Dinner
-
-shopcodePrice<-data.frame(shopCode=
-                          names(menu_cost_wax_before[tracking_shopCodes_mealOffering_6popularItems]),
-                      price=menu_cost_wax_before[tracking_shopCodes_mealOffering_6popularItems])
-
-wax_data_before|>select(shopCode,county)->shopcodeCounty
-
-
-shopcodeCounty %>%
-  dplyr::filter(shopCode %in% tracking_shopCodes_mealOffering_6popularItems)->shopcodeCounty
-
-shopcodeCounty|>left_join(shopcodePrice,by="shopCode")|>
-  mutate(county = ifelse(shopCode == "y1ew", "新北市", county))->shopcodeCounty
-
-shopcodeCounty %>%
-  mutate(breakfast = ifelse(shopCode %in% shopCodes_mealOffering_6popularItems_Breakfast, 1, 0))|>
-  mutate(lunch = ifelse(shopCode %in% shopCodes_mealOffering_6popularItems_Lunch, 1, 0))|>
-  mutate(dinner = ifelse(shopCode %in% shopCodes_mealOffering_6popularItems_Dinner, 1, 0)) ->shopcodeCountyBusinessHour
-head(shopcodeCountyBusinessHour,20)
 ```
 
-##### 早餐時段
-|county | breakfast| median_price| mean_price| max_price| min_price|
-|:------|---------:|------------:|----------:|---------:|---------:|
-|南投縣 |         0|      600.000|   767.5487|      4687|    156.00|
-|南投縣 |         1|      342.550|   383.2385|       830|    200.00|
-|嘉義市 |         0|      660.000|   810.3301|      5700|     85.60|
-|嘉義市 |         1|      367.000|   444.1639|      1550|    120.00|
-|嘉義縣 |         0|      599.500|   695.9353|      4017|    140.00|
-|嘉義縣 |         1|      328.875|   398.2000|      1060|    231.00|
-|基隆市 |         0|      720.000|   844.0054|      4282|    180.00|
-|基隆市 |         1|      372.500|   434.3049|      1310|    214.00|
-|宜蘭縣 |         0|      630.000|   752.1925|      4687|    121.55|
-|宜蘭縣 |         1|      393.300|   448.1704|      1940|     97.00|
-|屏東縣 |         0|      674.100|   790.4556|      3480|    153.00|
-|屏東縣 |         1|      368.500|   428.2336|      2120|    178.20|
-|彰化縣 |         0|      656.000|   738.6559|      4017|    123.00|
-|彰化縣 |         1|      361.625|   399.7944|      1247|    144.00|
-|新北市 |         0|      795.000|   857.7555|      4687|    120.00|
-|新北市 |         1|      410.000|   495.4129|      3150|    167.00|
-|新竹市 |         0|      760.000|   855.5545|      4017|    145.00|
-|新竹市 |         1|      418.000|   520.8532|      3750|    258.40|
-|新竹縣 |         0|      770.500|   913.6142|      4017|    175.00|
-|新竹縣 |         1|      401.500|   577.9321|      2094|    210.00|
-|桃園市 |         0|      730.000|   820.0725|      7090|    119.00|
-|桃園市 |         1|      385.000|   474.9385|      2194|    160.00|
-|澎湖縣 |         0|      620.000|   766.2667|      1670|    336.00|
-|澎湖縣 |         1|      504.000|   568.3333|       891|    310.00|
-|臺中市 |         0|      690.000|   791.6898|      4687|    102.00|
-|臺中市 |         1|      383.750|   475.6770|      4383|    162.00|
-|臺北市 |         0|      890.000|   988.8333|      5646|    135.00|
-|臺北市 |         1|      485.000|   594.8510|      2288|    147.00|
-|臺南市 |         0|      684.500|   778.6478|      4687|    148.75|
-|臺南市 |         1|      397.000|   477.1189|      1995|    190.00|
-|臺東縣 |         0|      557.500|   686.2500|      1310|    320.00|
-|臺東縣 |         1|      220.000|   220.0000|       220|    220.00|
-|花蓮縣 |         0|      602.000|   742.0101|      4017|    141.10|
-|花蓮縣 |         1|      347.400|   387.6855|      1195|    193.00|
-|苗栗縣 |         0|      575.000|   714.0206|      2340|    135.00|
-|苗栗縣 |         1|      350.000|   427.6315|      1360|    200.70|
-|金門縣 |         0|      962.500|   887.2273|      1518|    170.00|
-|金門縣 |         1|      484.000|   519.0000|       845|    313.00|
-|雲林縣 |         0|      650.000|   764.4347|      4687|    140.00|
-|雲林縣 |         1|      365.000|   496.5130|      1730|    210.00|
-|高雄市 |         0|      670.000|   775.2010|      4687|    108.00|
-|高雄市 |         1|      391.000|   472.9645|      2420|    139.00|
+|business_hour |   wax_cpi|  wane_cpi|
+|:-------------|---------:|---------:|
+|breakfast     | 0.0185956| 0.0095789|
+|lunch         | 0.0145903| 0.0096474|
+|dinner        | 0.0138364| 0.0103931|
 
+```{r}
+average_inflation_rate_wax_mealoffering_6|>
+  dplyr::filter(shopCode %in% shopCodes_mealOffering_6popularItems_Breakfast)->wax_cpi_breakfast
+average_inflation_rate_wane_mealoffering_6|>
+  dplyr::filter(shopCode %in% shopCodes_mealOffering_6popularItems_Breakfast)->wane_cpi_breakfast
 
+average_inflation_rate_wax_mealoffering_6|>
+  dplyr::filter(shopCode %in% shopCodes_mealOffering_6popularItems_Lunch)->wax_cpi_lunch
+average_inflation_rate_wane_mealoffering_6|>
+  dplyr::filter(shopCode %in% shopCodes_mealOffering_6popularItems_Lunch)->wane_cpi_lunch
 
-```{r,include=FALSE}
-shopcodeCountyBusinessHour|>
-  group_by(county,breakfast)|>
-  summarise(
-    median_price = median(price),
-    mean_price = mean(price),
-    max_price = max(price),
-    min_price = min(price)
-  )
+average_inflation_rate_wax_mealoffering_6|>
+  dplyr::filter(shopCode %in% shopCodes_mealOffering_6popularItems_Dinner)->wax_cpi_dinner
+average_inflation_rate_wane_mealoffering_6|>
+  dplyr::filter(shopCode %in% shopCodes_mealOffering_6popularItems_Dinner)->wane_cpi_dinner
+
+data.frame(business_hour=c("breakfast","lunch","dinner"),
+           CPI_wax=c(mean(wax_cpi_breakfast$inflation_rate),
+                     mean(wax_cpi_lunch$inflation_rate),
+                     mean(wax_cpi_dinner$inflation_rate)),
+           CPI_wane=c(mean(wane_cpi_breakfast$inflation_rate),
+                     mean(wane_cpi_lunch$inflation_rate),
+                     mean(wane_cpi_dinner$inflation_rate)))->df
+
+df|>tidyr::pivot_longer(cols=c("CPI_wax","CPI_wane"),names_to = "Period",values_to = "inflation_rate")->data_long2
+data_long2$Period<-factor(data_long2$Period,
+                            levels = c("CPI_wax", "CPI_wane"))
+
 ```
 
-##### 午餐時段
 
-|county | lunch| median_price| mean_price| max_price| min_price|
-|:------|-----:|------------:|----------:|---------:|---------:|
-|南投縣 |     0|      395.000|   496.5925|    1290.0|    156.00|
-|南投縣 |     1|      547.000|   720.2901|    4687.0|    200.00|
-|嘉義市 |     0|      410.000|   639.4727|    4250.0|     85.60|
-|嘉義市 |     1|      585.000|   773.6096|    5700.0|    120.00|
-|嘉義縣 |     0|      302.500|   487.7812|    1336.0|    140.00|
-|嘉義縣 |     1|      485.500|   653.6089|    4017.0|    148.75|
-|基隆市 |     0|      450.000|   628.5103|    3320.0|    195.00|
-|基隆市 |     1|      600.000|   753.4206|    4282.0|    180.00|
-|宜蘭縣 |     0|      416.500|   555.1417|    1870.0|    121.55|
-|宜蘭縣 |     1|      568.500|   710.0245|    4687.0|     97.00|
-|屏東縣 |     0|      458.500|   568.2790|    1644.0|    153.00|
-|屏東縣 |     1|      620.000|   729.3109|    3480.0|    168.00|
-|彰化縣 |     0|      399.000|   480.5772|    1520.0|    123.00|
-|彰化縣 |     1|      568.000|   687.6606|    4017.0|    144.00|
-|新北市 |     0|      454.500|   612.1128|    4498.2|    162.00|
-|新北市 |     1|      715.000|   807.9625|    4687.0|    120.00|
-|新竹市 |     0|      395.000|   638.5900|    3750.0|    145.00|
-|新竹市 |     1|      685.000|   814.1564|    4017.0|    255.00|
-|新竹縣 |     0|      355.000|   496.7689|    3300.0|    175.00|
-|新竹縣 |     1|      765.000|   897.4663|    4017.0|    210.00|
-|桃園市 |     0|      433.200|   563.4151|    2554.0|    119.00|
-|桃園市 |     1|      649.900|   771.2728|    7090.0|    120.00|
-|澎湖縣 |     0|      455.000|   608.6667|    1035.0|    336.00|
-|澎湖縣 |     1|      620.000|   758.2000|    1670.0|    310.00|
-|臺中市 |     0|      420.000|   540.7583|    3400.0|    102.00|
-|臺中市 |     1|      655.000|   772.6696|    4687.0|    106.40|
-|臺北市 |     0|      524.000|   717.3777|    3300.0|    135.00|
-|臺北市 |     1|      840.000|   936.5964|    5646.0|    147.00|
-|臺南市 |     0|      405.500|   554.8159|    3090.0|    148.75|
-|臺南市 |     1|      610.000|   746.6003|    4687.0|    170.00|
-|臺東縣 |     0|      395.000|   395.0000|     395.0|    395.00|
-|臺東縣 |     1|      520.000|   642.5000|    1310.0|    220.00|
-|花蓮縣 |     0|      477.000|   628.0475|    1880.0|    141.10|
-|花蓮縣 |     1|      519.000|   654.9619|    4017.0|    193.00|
-|苗栗縣 |     0|      364.800|   452.0119|    1392.0|    135.00|
-|苗栗縣 |     1|      560.000|   700.5594|    2340.0|    135.00|
-|金門縣 |     0|      385.000|   420.0000|     730.0|    170.00|
-|金門縣 |     1|      945.000|   892.7391|    1518.0|    313.00|
-|雲林縣 |     0|      375.775|   484.3190|    2194.0|    140.00|
-|雲林縣 |     1|      595.500|   750.8627|    4687.0|    147.00|
-|高雄市 |     0|      395.000|   546.9533|    2940.0|    108.00|
-|高雄市 |     1|      620.000|   742.1057|    4687.0|    124.20|
+ 
 
-
-```{r,include=FALSE}
-shopcodeCountyBusinessHour %>%
-  group_by(county,lunch) %>%
-  summarise(
-    median_price = median(price),
-    mean_price = mean(price),
-    max_price = max(price),
-    min_price = min(price)
-  )
+```{r}
+plot_ly(data_long2, x = ~Period, y = ~inflation_rate,color = ~business_hour,text = ~paste0(business_hour, ": ", scales::percent(inflation_rate)),hoverinfo="text") %>%
+  add_lines(line = list(width = 3)) %>%
+  layout(title = "Inflation Rate by Business Hour",
+         xaxis = list(title = "Period"),
+         yaxis = list(title = "Inflation Rate"),
+         hovermode = "closest"
+         ) %>%
+  add_markers()%>%
+  layout(showlegend = FALSE)
 ```
 
-##### 晚餐時段
-|county | dinner| median_price| mean_price| max_price| min_price|
-|:------|------:|------------:|----------:|---------:|---------:|
-|南投縣 |      0|      342.550|   362.5236|     649.0|    200.00|
-|南投縣 |      1|      586.000|   744.1185|    4687.0|    156.00|
-|嘉義市 |      0|      356.000|   450.6913|    1550.0|    170.00|
-|嘉義市 |      1|      620.500|   789.7153|    5700.0|     85.60|
-|嘉義縣 |      0|      263.125|   315.3333|     632.0|    225.00|
-|嘉義縣 |      1|      537.500|   674.9129|    4017.0|    140.00|
-|基隆市 |      0|      340.000|   362.6357|     960.0|    214.00|
-|基隆市 |      1|      684.250|   801.4168|    4282.0|    180.00|
-|宜蘭縣 |      0|      369.000|   398.9413|    1680.0|     97.00|
-|宜蘭縣 |      1|      620.000|   736.8895|    4687.0|    121.55|
-|屏東縣 |      0|      349.350|   358.6000|     615.0|    178.20|
-|屏東縣 |      1|      675.000|   794.9045|    3480.0|    153.00|
-|彰化縣 |      0|      340.000|   365.1005|    1247.0|    144.00|
-|彰化縣 |      1|      600.000|   701.1798|    4017.0|    123.00|
-|新北市 |      0|      384.500|   424.6698|    1170.0|    175.00|
-|新北市 |      1|      756.900|   831.4025|    4687.0|    120.00|
-|新竹市 |      0|      405.000|   470.4925|    2013.0|    258.40|
-|新竹市 |      1|      723.000|   839.8953|    4017.0|    145.00|
-|新竹縣 |      0|      364.500|   476.6194|    2094.0|    210.00|
-|新竹縣 |      1|      760.000|   899.0124|    4017.0|    175.00|
-|桃園市 |      0|      350.000|   391.8124|    1040.0|    185.00|
-|桃園市 |      1|      695.000|   795.6921|    7090.0|    119.00|
-|澎湖縣 |      0|      504.000|   568.3333|     891.0|    310.00|
-|澎湖縣 |      1|      620.000|   766.2667|    1670.0|    336.00|
-|臺中市 |      0|      350.000|   396.7707|    2240.0|    180.00|
-|臺中市 |      1|      674.750|   781.0572|    4687.0|    102.00|
-|臺北市 |      0|      436.900|   530.6036|    1800.0|    166.25|
-|臺北市 |      1|      870.000|   960.4581|    5646.0|    135.00|
-|臺南市 |      0|      355.000|   389.7336|    1640.0|    190.00|
-|臺南市 |      1|      660.000|   766.5852|    4687.0|    148.75|
-|臺東縣 |      0|      220.000|   220.0000|     220.0|    220.00|
-|臺東縣 |      1|      557.500|   686.2500|    1310.0|    320.00|
-|花蓮縣 |      0|      345.000|   393.2009|    1195.0|    205.00|
-|花蓮縣 |      1|      569.000|   716.5807|    4017.0|    141.10|
-|苗栗縣 |      0|      313.500|   342.7426|     582.0|    200.70|
-|苗栗縣 |      1|      572.500|   710.7481|    2340.0|    135.00|
-|金門縣 |      0|      410.000|   380.3333|     418.0|    313.00|
-|金門縣 |      1|      905.000|   859.6800|    1518.0|    170.00|
-|雲林縣 |      0|      330.000|   397.4449|    1730.0|    210.00|
-|雲林縣 |      1|      645.000|   758.2063|    4687.0|    140.00|
-|高雄市 |      0|      360.000|   403.8705|    1487.5|    139.00|
-|高雄市 |      1|      646.000|   757.4558|    4687.0|    108.00|
+- 以早午晚餐三個時段來觀察，可以看出在蛋荒嚴重時期，早餐時段的店家之物價上漲率在1.8596%左右，是三個時段當中最高的。這是否跟早餐店需要用到大量的雞蛋有關聯?
+- 蛋荒趨緩時期物價上漲率最高的則是晚餐時段的店家，約在1.0393%，而早餐時段的物價上漲率則有放緩的趨勢，來到0.9579%
 
 
-```{r,include=FALSE}
-shopcodeCountyBusinessHour %>%
-  group_by(county,dinner) %>%
-  summarise(
-    median_price = median(price),
-    mean_price = mean(price),
-    max_price = max(price),
-    min_price = min(price)
-  )
+##### 主計處公布之資料
+###### 抓出主計處公布之外食費與其他外送平台餐廳可能所需成本(包括穀類及其製品、肉類、肉類製品、蛋類、水產品、蔬菜、食用油、調味品)的消費者物價指數，並使用2月、4月及7月資料進行比較
+```{r,warning=FALSE}
+category_CPI_Index<-readxl::read_xlsx("C:/NTPU/thesis/category_CPI_Index.xlsx")
+
+data.frame(category=category_CPI_Index$category,
+           CPI_wax=log(category_CPI_Index$Apr)-log(category_CPI_Index$Feb),
+           CPI_wane=log(category_CPI_Index$Jul)-log(category_CPI_Index$Apr))->category_InflationRate
+
+category_InflationRate|>
+  tidyr::pivot_longer(cols = starts_with("CPI"),names_to = "Period",values_to = "InflationRate")->category_InflationRate_long
+category_InflationRate_long$Period<-factor(category_InflationRate_long$Period,levels = c("CPI_wax","CPI_wane"))
+category_InflationRate_long$category<-factor(category_InflationRate_long$category,levels = c("穀類及其製品","肉類","肉類製品","水產品","食用油","調味品","外食費","蛋類","蔬菜"
+))
+color_vector4<-c("#FAF1E4","#FAF0E6","#DAC0A3","#EFB495",
+                 "#FFEECC","#FFDDCC","#4682A9","#35A29F","#C63D2F")
+plot_ly(category_InflationRate_long, x = ~Period, y = ~InflationRate,color = ~category,colors=color_vector4,text = ~paste0(category, ": ", scales::percent(InflationRate)),hoverinfo="text") %>%
+  add_lines(line = list(width = 3)) %>%
+  layout(title = "Inflation Rate by category",
+         xaxis = list(title = "Period"),
+         yaxis = list(title = "Inflation Rate"),
+         hovermode = "closest"
+         ) %>%
+  add_markers()%>%
+  layout(showlegend = FALSE)
 ```
 
+- 除了蔬菜有較高的漲幅、蛋類有明顯跌幅外，其餘種類皆無太明顯的漲跌幅。而外食費的上漲幅度也趨緩，從1.4677%降至0.8878%。
