--- a/targets/Thesis.qmd
+++ b/targets/Thesis.qmd
@@ -17,11 +17,11 @@ execute:
 
 # 第二章、文獻回顧
 
-消費者物價指數（CPI）的編製和計算一直是各國政府關注的重要課題。Costa(2001)的研究發現，估算的CPI與實際支出調查數據之間存在差距，這表明CPI的計算可能存在偏差。例如，該研究使用了1972年至1994年的食品和娛樂支出數據，發現這段期間平均年偏差為1.6％。這些發現凸顯了在CPI計算中需要更全面考慮現實消費環境的重要性。
+消費者物價指數（CPI）的編製和計算一直是各國政府關注的重要課題，作為通貨膨脹的衡量指標，其準確性對於政策制定及評估有深遠影響。然而，Costa(2001)的研究發現，估算的CPI與實際支出調查數據之間存在差距，這表明CPI的計算可能存在偏差。例如，該研究使用了1972年至1994年的食品和娛樂支出數據，發現這段期間平均年偏差為1.6％。這些發現凸顯了在CPI計算中需要更全面考慮現實消費環境的重要性。
 
-根據洪振倫［2023］指出各國計算CPI時會遇到一些共同的問題，其中包括樣本偏誤、品質偏誤、替代性偏誤、新商品偏誤及新銷售通路偏誤等。在CPI的編製過程中，樣本偏誤被認為是一個主要問題。這是因為樣本的選取可能存在偏差，導致CPI無法完全代表整個消費者群體的消費行為。為了解決這一問題。本文將利用各個面向的權數調整，包含店家所在地區、店家販售餐飲類型及店家營業時段，來確保所選樣本足以代表目標母體，從而提高CPI的代表性和準確性。
+各國計算CPI時會遇到一些共同的問題，其中包括Bradley,R(2001) 指出的樣本偏誤。在CPI的編製過程中，樣本偏誤被認為是一個主要問題。這是因為樣本的選取可能存在偏差，導致CPI無法完全代表整個消費者群體的消費行為。其次是替代性偏誤，Marilyn E. Manser和Richard J. McDonald(1988)在文中探討了消費者行為的變化。當計算通貨膨脹時，未考慮到商品價格上升，消費者可能改選擇較便宜的方式替代，可能會導致通膨被高估。Boskin Commission(1996)中也提到了新商品已廣泛出現，卻在多年後才被納入CPI的新商品偏誤；以及當某個商品的品質提高，卻因為價格沒有調整而無法反映在CPI裡的品質偏誤。
 
-其次是替代性偏誤，Marilyn E. Manser和Richard J. McDonald(1988)在文中探討了消費者行為的變化。當計算通貨膨脹時，未考慮到商品價格上升，消費者可能改選擇較便宜的方式替代，可能會導致通膨被高估。為了反映消費者的偏好，本文也將透過foodpanda上店家顧客的評論數來調整計算物價上漲率的方式。
+為了降低偏誤的程度，本文將著重在樣本偏誤及替代性偏誤。首先，將利用各個面向的權數調整，包含店家所在地區、店家販售餐飲類型及店家營業時段，來確保所選樣本足以代表目標母體，從而提高CPI的代表性和準確性。其次，將透過foodpanda上店家顧客的評論數來調整計算物價上漲率的方式，以更真實地反映消費者的偏好和行為。
 
 # 第三章、資料處理與觀察
 
@@ -39,7 +39,43 @@ execute:
 
 ## 第三節、資料觀察與分析
 
-根據foodapnda上的店家，首先計算每一期六項人氣精選商品的價格加總，而個別店家當期的CPI上漲率=ln(下一期價格)-ln(當期價格)，再將當期所有店家的CPI上漲率取平均得到當期的CPI上漲率。然而，因為每一期間隔的天數不同，將利用(當期的CPI上漲率/間隔天數)\*365得到年均CPI上漲率，以利各期之間的比較。
+下表為各其篩選出的樣本店家數、當期foodpanda總店家數以及篩選出樣本店家占總店家的比例。由於並非每一期都能在平台上抓取到完整數據，而這種情況對於能夠有效使用的樣本數產生直接的影響。此外，因為篩選的標準是店家要在當期與下一期皆存在，因此像2023年8月13日這天只抓取到13248間店家，也會同時降低上一期2023年8月6日的有效樣本數，凸顯了資料在蒐集上的限制。
+
+| 日期           | 樣本店家數 | foodpanda總店家數 | 樣本店家占當期總店家比例 |
+|:---------------|-----------:|------------------:|:-------------------------|
+| 2023年02月03日 |      14560 |             49593 | 29.3590%                 |
+| 2023年02月10日 |      15058 |             51054 | 29.4943%                 |
+| 2023年02月17日 |      15220 |             49031 | 31.0416%                 |
+| 2023年02月24日 |      16885 |             51517 | 32.7756%                 |
+| 2023年03月04日 |      17352 |             51586 | 33.6370%                 |
+| 2023年03月11日 |      18874 |             52026 | 36.2780%                 |
+| 2023年03月18日 |      18620 |             52042 | 35.7788%                 |
+| 2023年03月25日 |      18307 |             51921 | 35.2593%                 |
+| 2023年04月27日 |      19696 |             50717 | 38.8351%                 |
+| 2023年05月09日 |      19442 |             50597 | 38.4252%                 |
+| 2023年05月16日 |      22906 |             55278 | 41.4378%                 |
+| 2023年05月23日 |      23713 |             55721 | 42.5567%                 |
+| 2023年05月31日 |      24261 |             55917 | 43.3875%                 |
+| 2023年06月05日 |      22613 |             55374 | 40.8369%                 |
+| 2023年06月14日 |      21618 |             55633 | 38.8582%                 |
+| 2023年07月01日 |      22318 |             58674 | 38.0373%                 |
+| 2023年07月22日 |      25323 |             58464 | 43.3138%                 |
+| 2023年07月26日 |      25079 |             58970 | 42.5284%                 |
+| 2023年08月06日 |       5876 |             56545 | 10.3917%                 |
+| 2023年08月13日 |       5237 |             13248 | 39.5305%                 |
+| 2023年08月20日 |      21313 |             58007 | 36.7421%                 |
+| 2023年08月28日 |      12361 |             57663 | 21.4366%                 |
+| 2023年09月04日 |      12207 |             33845 | 36.0674%                 |
+| 2023年09月21日 |      20947 |             56445 | 37.1105%                 |
+| 2023年10月04日 |      20222 |             56744 | 35.6372%                 |
+| 2023年10月08日 |      15272 |             55314 | 27.6096%                 |
+| 2023年10月15日 |      15903 |             56621 | 28.0868%                 |
+| 2023年11月08日 |      16098 |             56504 | 28.4900%                 |
+| 2023年11月15日 |      15663 |             56528 | 27.7084%                 |
+| 2023年11月29日 |       8500 |             56610 | 15.0150%                 |
+| 2023年12月06日 |       5617 |             56665 | 9.9126%                  |
+
+根據foodapnda上所篩選出的各期樣本店家，首先計算每一期六項人氣精選商品的價格加總，而個別店家當期的CPI上漲率=ln(下一期價格)-ln(當期價格)，再將當期所有店家的CPI上漲率取平均得到當期的CPI上漲率。然而，因為每一期間隔的天數不同，將利用(當期的CPI上漲率/間隔天數)\*365得到年均CPI上漲率，以利各期之間的比較。
 
 | 日期           | CPI上漲率 | 間隔天數 | 日均CPI上漲率 | 年均CPI上漲率 |
 |:---------------|:----------|---------:|:--------------|:--------------|
@@ -132,6 +168,10 @@ knitr::include_graphics("image/population_county.png")
 | 2023年11月29日 | 15.3837% | 16.7532% | 10.1653% | 12.4203% | 12.2078% | 7.1429% | 2.1488% | 5.2066% | 2.8335% | 2.2668% | 2.1724% | 2.7273% | 1.5939% | 1.3932% | 1.6411% | 1.7710% | 1.2869% | 0.5313% | 0.3542% |
 | 2023年12月06日 | 15.3475% | 16.1694% | 10.2555% | 13.2571% | 12.5960% | 7.1467% | 1.8581% | 5.2528% | 3.0195% | 2.3584% | 2.0189% | 2.3227% | 1.6795% | 1.3936% | 1.5187% | 1.7867% | 1.1435% | 0.5360% | 0.3395% |
 
+$$
+\text{各期各店家縣市權數} = \frac{\text{縣市母體分配}}{\text{該期縣市樣本分配}}
+$$
+
 各期各店家縣市權數=縣市母體分配/該期縣市樣本分配
 
 各期經縣市加權CPI上漲率=(各期各店家縣市權數\*店家CPI上漲率)/權數加總
@@ -223,10 +263,10 @@ knitr::include_graphics("image/mealOffering_inflation_weight1.png")
 knitr::include_graphics("image/population_catRegion.png")
 ```
 
-下表為各期所選的樣本店家區域類別的占比。有別於母體台式及無區域兩類占比相當，每期所篩選出的樣本以台式占多數，每期幾乎皆有20%以上的差距。將根據店家的類別進行加權處理，以確保每一種類型的的店家樣本能夠反映母體的區域類型結構。
+下表為各期所選的樣本店家區域類別的占比。有別於母體台式及無區域兩類占比相當皆在37%左右，每期所篩選出的樣本以台式占多數，每期的兩個類別幾乎皆有20%以上的差距。將根據店家的類別進行加權處理，以確保每一種類型的的店家樣本能夠反映母體的區域類型結構。
 
 | 日期           | 台式     | 無區域   | 歐美     | 日式     | 中式    | 東南亞  | 韓式    | 港式    | 異國    |
-|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|
+|:---------|:--------|:--------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|
 | 2023年02月03日 | 50.4052% | 18.6470% | 11.4423% | 10.2747% | 2.9945% | 2.4725% | 2.2459% | 1.0577% | 0.4602% |
 | 2023年02月10日 | 49.6879% | 19.4979% | 11.3959% | 10.3201% | 2.8955% | 2.4970% | 2.1517% | 1.1356% | 0.4184% |
 | 2023年02月17日 | 49.1853% | 20.3417% | 11.0710% | 10.1577% | 2.9698% | 2.5296% | 2.1419% | 1.1629% | 0.4402% |
@@ -307,13 +347,13 @@ knitr::include_graphics("image/mealOffering_inflation_weight2.png")
 
 本文將foodpanda上店家營業時段分為八大類，供餐時間6:00至9:00為早餐、11:00至14:00為午餐、17:00至20:00為晚餐、6:00至9:00且11:00至14:00為早午餐、11:00至14:00且17:00至20:00為午晚餐、6:00至9:00且17:00至20:00為早晚餐、6:00至9:00且11:00至14:00且17:00至20:00為早午晚餐，不屬於上述其中一類者皆歸在其他。
 
-根據2023年8月6日的營業時段母體分配，午晚餐占59.65%、晚餐占16.46%、早午晚餐占11.84%、早午餐占10.01%、午餐占0.75%、早餐占0.61%、其他占0.36%、早晚餐占0.32%。
+根據2023年8月6日的營業時段母體分配，以午晚餐為大宗，占59.65%。接著依序為晚餐16.46%、早午晚餐11.84%、早午餐10.01%、午餐0.75%、早餐0.61%、其他0.36%、早晚餐0.32%。
 
 ```{r,echo=FALSE,out.width="1000px"}
 knitr::include_graphics("image/population_businessHour.png")
 ```
 
-下表為各期所選的樣本店家營業時段的占比。每一期將皆以午晚餐為主要類別，皆有著接近60%的占比。整體而言，所有類別的占比和母體差距不大。
+下表為各期所選的樣本店家營業時段的占比。每一期皆以午晚餐為主要類別，皆有著接近60%的占比。整體而言，所有類別的占比和母體差距不大，也間接說明樣本選擇在營業時段這個面向下，具有良好的代表性。然而，在2023年年底卻出現些微改變。特別是晚餐的占比顯示下降，而早午餐的占比則呈現上升趨勢。2023年11月15日、11月29日和12月6日的晚餐占比分別為19.3896%、8.9765%、6.8898%；同期早午餐的占比則分別為10.5471%、18.4706%、25.5474%。
 
 | 日期           | 午晚餐   | 晚餐     | 早午餐   | 早午晚餐 | 早餐    | 早晚餐  | 午餐    | 其他    |
 |:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|
@@ -353,7 +393,7 @@ knitr::include_graphics("image/population_businessHour.png")
 
 各期經營業時段加權CPI上漲率=(各期各店家營業時段權數\*店家CPI上漲率)/權數加總
 
-比較未經加權的CPI上漲率及經營業時段加權的CPI上漲率，經營業時段加權的CPI上漲率普遍略低於未經加權的CPI上漲率。特別是在2023年5月31日的差異較為明顯，差距來到0.7532%。
+比較未經加權的CPI上漲率及經營業時段加權的CPI上漲率，經營業時段加權的CPI上漲率普遍略低於未經加權的CPI上漲率。特別是在2023年5月31日的差異較為明顯，差距來到0.7532%。值得注意的還有2023年8月28日，有別於縣市加權與區域類別加權的CPI上漲率會略低於未加權CPI上漲率，此處使用營業時段加權反而高於未加權CPI上漲率。
 
 ```{r,echo=FALSE,out.width="1000px"}
 knitr::include_graphics("image/mealOffering_inflation_weight3.png")
@@ -395,21 +435,129 @@ knitr::include_graphics("image/mealOffering_inflation_weight3.png")
 
 ### 4.經縣市及區域類別加權
 
+比較未加權CPI上漲率及經縣市、區域類別加權CPI上漲率，可以發現從2023年2月至12月期間的相似性極高。然而，偶爾會出現一些波動差異。尤其在2023年5月以前，經加權的CPI上漲率波動較大，反映出當時縣市和區域類別的權重設置對CPI編製產生了影響。
+
 ```{r,echo=FALSE,out.width="1000px"}
 knitr::include_graphics("image/mealOffering_inflation_weight4.png")
 ```
 
+| 日期           | 未經加權CPI上漲率 | 經縣市、區域類別加權CPI上漲率 | 差距    |
+|:---------------|:------------------|:------------------------------|:--------|
+| 2023年02月03日 | 5.4812%           | 5.0759%                       | 0.4053% |
+| 2023年02月10日 | 5.5326%           | 6.0794%                       | 0.5468% |
+| 2023年02月17日 | 2.6344%           | 2.3310%                       | 0.3034% |
+| 2023年02月24日 | 4.8659%           | 4.9798%                       | 0.1140% |
+| 2023年03月04日 | 5.1315%           | 5.9899%                       | 0.8584% |
+| 2023年03月11日 | 4.4145%           | 4.4352%                       | 0.0207% |
+| 2023年03月18日 | 9.9762%           | 10.4251%                      | 0.4489% |
+| 2023年03月25日 | 7.2191%           | 7.3054%                       | 0.0863% |
+| 2023年04月27日 | 5.1264%           | 5.4836%                       | 0.3572% |
+| 2023年05月09日 | 5.7226%           | 5.5371%                       | 0.1855% |
+| 2023年05月16日 | 2.4794%           | 2.5377%                       | 0.0584% |
+| 2023年05月23日 | 2.5712%           | 3.2446%                       | 0.6734% |
+| 2023年05月31日 | 6.7868%           | 6.6702%                       | 0.1166% |
+| 2023年06月05日 | 3.1352%           | 3.4280%                       | 0.2928% |
+| 2023年06月14日 | 3.4904%           | 3.7169%                       | 0.2264% |
+| 2023年07月01日 | 3.1420%           | 3.2370%                       | 0.0950% |
+| 2023年07月22日 | 3.3416%           | 3.0323%                       | 0.3093% |
+| 2023年07月26日 | 1.1558%           | 1.4013%                       | 0.2455% |
+| 2023年08月06日 | 1.2860%           | 1.4584%                       | 0.1725% |
+| 2023年08月13日 | 3.5933%           | 3.4665%                       | 0.1268% |
+| 2023年08月20日 | 2.1290%           | 2.3235%                       | 0.1944% |
+| 2023年08月28日 | 4.2285%           | 4.0143%                       | 0.2142% |
+| 2023年09月04日 | 2.6615%           | 2.2450%                       | 0.4165% |
+| 2023年09月21日 | 2.4877%           | 2.2264%                       | 0.2614% |
+| 2023年10月04日 | 1.8127%           | 1.6327%                       | 0.1800% |
+| 2023年10月08日 | 2.1455%           | 2.1391%                       | 0.0064% |
+| 2023年10月15日 | 0.3052%           | 0.0085%                       | 0.2968% |
+| 2023年11月08日 | 0.9470%           | 0.8609%                       | 0.0861% |
+| 2023年11月15日 | 1.4451%           | 1.4585%                       | 0.0135% |
+| 2023年11月29日 | 2.4161%           | 2.8875%                       | 0.4714% |
+| 2023年12月06日 | 3.1800%           | 3.0117%                       | 0.1683% |
+
 ### 5.經縣市及營業時段加權
+
+未加權CPI上漲率與經縣市、營業時段加權後CPI上漲率的對比，從圖中可以觀察到，兩條曲線大致上呈現相同的趨勢。尤其在2023年8月6日以後，兩者的趨勢線幾乎重合。但到了2023年11月29日未加權與加權的CPI上漲率卻呈現相反的走勢。
 
 ```{r,echo=FALSE,out.width="1000px"}
 knitr::include_graphics("image/mealOffering_inflation_weight5.png")
 ```
 
+| 日期           | 未經加權CPI上漲率 | 經縣市、營業時段加權CPI上漲率 | 差距    |
+|:---------------|:------------------|:------------------------------|:--------|
+| 2023年02月03日 | 5.4812%           | 5.2942%                       | 0.1870% |
+| 2023年02月10日 | 5.5326%           | 5.2411%                       | 0.2915% |
+| 2023年02月17日 | 2.6344%           | 2.4944%                       | 0.1400% |
+| 2023年02月24日 | 4.8659%           | 4.8141%                       | 0.0517% |
+| 2023年03月04日 | 5.1315%           | 4.9263%                       | 0.2051% |
+| 2023年03月11日 | 4.4145%           | 4.1781%                       | 0.2364% |
+| 2023年03月18日 | 9.9762%           | 9.7224%                       | 0.2539% |
+| 2023年03月25日 | 7.2191%           | 7.0361%                       | 0.1830% |
+| 2023年04月27日 | 5.1264%           | 5.2494%                       | 0.1230% |
+| 2023年05月09日 | 5.7226%           | 5.8872%                       | 0.1646% |
+| 2023年05月16日 | 2.4794%           | 2.4108%                       | 0.0685% |
+| 2023年05月23日 | 2.5712%           | 2.5089%                       | 0.0623% |
+| 2023年05月31日 | 6.7868%           | 6.0831%                       | 0.7037% |
+| 2023年06月05日 | 3.1352%           | 3.2068%                       | 0.0716% |
+| 2023年06月14日 | 3.4904%           | 3.5019%                       | 0.0115% |
+| 2023年07月01日 | 3.1420%           | 3.1250%                       | 0.0170% |
+| 2023年07月22日 | 3.3416%           | 3.3507%                       | 0.0092% |
+| 2023年07月26日 | 1.1558%           | 0.5452%                       | 0.6106% |
+| 2023年08月06日 | 1.2860%           | 1.2454%                       | 0.0406% |
+| 2023年08月13日 | 3.5933%           | 3.5540%                       | 0.0393% |
+| 2023年08月20日 | 2.1290%           | 2.1140%                       | 0.0150% |
+| 2023年08月28日 | 4.2285%           | 4.4367%                       | 0.2082% |
+| 2023年09月04日 | 2.6615%           | 2.4125%                       | 0.2490% |
+| 2023年09月21日 | 2.4877%           | 2.5259%                       | 0.0382% |
+| 2023年10月04日 | 1.8127%           | 1.7694%                       | 0.0434% |
+| 2023年10月08日 | 2.1455%           | 1.9660%                       | 0.1795% |
+| 2023年10月15日 | 0.3052%           | 0.4318%                       | 0.1266% |
+| 2023年11月08日 | 0.9470%           | 0.9035%                       | 0.0434% |
+| 2023年11月15日 | 1.4451%           | 1.3908%                       | 0.0543% |
+| 2023年11月29日 | 2.4161%           | 2.6736%                       | 0.2575% |
+| 2023年12月06日 | 3.1800%           | 2.4953%                       | 0.6847% |
+
 ### 6.經區域類別及營業時段加權
+
+在進行未加權CPI上漲率與經區域類別、營業時段加權後CPI上漲率的對比分析中，我們發現經加權的CPI上漲率展現出較大的波動幅度。這一現象特別明顯於2023年2月3日至2023年3月4日這段期間。在這個月內，經過區域類別和營業時段加權的CPI上漲率不僅呈現更劇烈的變動，而且與未加權的CPI上漲率相比，這種差異更為明顯。
 
 ```{r,echo=FALSE,out.width="1000px"}
 knitr::include_graphics("image/mealOffering_inflation_weight6.png")
 ```
+
+| 日期           | 未加權CPI上漲率 | 經區域類別、營業時段加權CPI上漲率 | 差距    |
+|:---------------|:----------------|:----------------------------------|:--------|
+| 2023年02月03日 | 5.4812%         | 5.2679%                           | 0.2133% |
+| 2023年02月10日 | 5.5326%         | 6.3874%                           | 0.8548% |
+| 2023年02月17日 | 2.6344%         | 2.4046%                           | 0.2298% |
+| 2023年02月24日 | 4.8659%         | 5.1059%                           | 0.2400% |
+| 2023年03月04日 | 5.1315%         | 5.4766%                           | 0.3452% |
+| 2023年03月11日 | 4.4145%         | 4.2773%                           | 0.1372% |
+| 2023年03月18日 | 9.9762%         | 10.0318%                          | 0.0555% |
+| 2023年03月25日 | 7.2191%         | 7.1770%                           | 0.0421% |
+| 2023年04月27日 | 5.1264%         | 5.3371%                           | 0.2107% |
+| 2023年05月09日 | 5.7226%         | 5.3306%                           | 0.3920% |
+| 2023年05月16日 | 2.4794%         | 2.1568%                           | 0.3226% |
+| 2023年05月23日 | 2.5712%         | 2.8141%                           | 0.2429% |
+| 2023年05月31日 | 6.7868%         | 6.0126%                           | 0.7743% |
+| 2023年06月05日 | 3.1352%         | 3.4539%                           | 0.3188% |
+| 2023年06月14日 | 3.4904%         | 3.4833%                           | 0.0071% |
+| 2023年07月01日 | 3.1420%         | 3.2084%                           | 0.0664% |
+| 2023年07月22日 | 3.3416%         | 2.9370%                           | 0.4045% |
+| 2023年07月26日 | 1.1558%         | 0.7266%                           | 0.4292% |
+| 2023年08月06日 | 1.2860%         | 1.3597%                           | 0.0738% |
+| 2023年08月13日 | 3.5933%         | 3.2880%                           | 0.3053% |
+| 2023年08月20日 | 2.1290%         | 2.0645%                           | 0.0645% |
+| 2023年08月28日 | 4.2285%         | 4.9410%                           | 0.7125% |
+| 2023年09月04日 | 2.6615%         | 2.5971%                           | 0.0644% |
+| 2023年09月21日 | 2.4877%         | 2.3643%                           | 0.1234% |
+| 2023年10月04日 | 1.8127%         | 1.8655%                           | 0.0527% |
+| 2023年10月08日 | 2.1455%         | 2.1297%                           | 0.0157% |
+| 2023年10月15日 | 0.3052%         | 0.2007%                           | 0.1045% |
+| 2023年11月08日 | 0.9470%         | 0.8594%                           | 0.0876% |
+| 2023年11月15日 | 1.4451%         | 1.5065%                           | 0.0614% |
+| 2023年11月29日 | 2.4161%         | 2.3704%                           | 0.0457% |
+| 2023年12月06日 | 3.1800%         | 3.1289%                           | 0.0511% |
 
 ### 7.經縣市、區域類別及營業時段加權
 
@@ -425,6 +573,10 @@ knitr::include_graphics("image/mealOffering_inflation_weight7.png")
 
 ```{r,echo=FALSE,out.width="1000px"}
 knitr::include_graphics("image/mealOffering_inflation_weight8.png")
+```
+
+```{r,echo=FALSE,out.width="1000px"}
+knitr::include_graphics("image/mealOffering_inflation_weight9.png")
 ```
 
 # 第五章、實證分析
