--- a/targets/Thesis.qmd
+++ b/targets/Thesis.qmd
@@ -410,7 +410,7 @@ knitr::include_graphics("image/chart5_12.png")
 knitr::include_graphics("image/chart5_13.png")
 ```
 
-圖5-14為台北市的物價上漲率，不同於商家面向加權，臺北市的物價上漲率為六都中最平穩。此處用消費者面向加權，臺北市反而出現較大的波動。3月18日甚至出現14.9246%的上漲率，明顯高於其他縣市。且在8月至9月有著所有直轄市最高的物價上漲率。
+圖5-14為台北市的物價上漲率，可以觀察到臺北市出現較大的波動，3月18日甚至出現14.9246%的上漲率，明顯高於其他縣市。且在8月至9月有著所有直轄市最高的物價上漲率。
 
 ```{r,echo=FALSE,out.width="1000px"}
 knitr::include_graphics("image/chart5_14.png")
